[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cb-tax-calculator"
version = "2024.2.1"
requires-python = ">= 3.8"
dependencies = [
  "dateparser",
  "pydantic"
]
readme = "README.md"
license = {file = "LICENSE"}

[project.optional-dependencies]
dev = [
    "black",
    "flake8",
    "isort",
    "mypy",
    "types-dateparser"
]

[tool.black]
line-length = 120
